made active bottom border state hover instead

--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@ ul li a {
   color: white;
   padding: 18px 25px;
   text-decoration: none;
-
+  border-bottom: 1px solid transparent;
+  transition: border-color 0.2s ease;
 }
 
 ul li a.active {
   color: pink;
   font-weight: bold;
-  border-bottom: 1px solid pink;
-
 }
 
 ul li a:hover {
   color: pink;
+  border-bottom: 1px solid pink;
 }
 
 .info {
