--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ ul li a:hover {
 
 <div class="navbar">
 <ul>
-  <li><a class="active" href="index.html">home</a></li>
-  <li><a href="contact.html">contact</a></li>
+  <li><a class="active" href="">home</a></li>
+  <li><a href="">contact</a></li>
 </ul>
 
 <ul>
