--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@ p {
 				</div>
 			</div>
 			<h2>about me</h2>
-			<p><b>Welcome to my website!</b> It's a work in progress, so please be patient. I'm currently experimenting with layouts and testing mobile compatibility.</p>
-			<p>I enjoy tinkering with Linux to a varying degree, specifically handpicking packages, optimizing my system, and making my workflow efficient.</p>
-			<p>I draw silly anthropomorphic animals cause animals are so cool and I consider myself a furry, but I don't interact much with the community.</p>
+			<p><b>Welcome to my website!</b> It's a work in progress, so please be patient. I'm currently experimenting and testing mobile compatibility.</p>
+			<p>I enjoy tinkering with Linux, in which I handpick packages, optimize my system, and make my workflow efficient.</p>
+			<p>I draw silly anthropomorphic animals cause animals are so cool. I consider myself a furry, but I don't interact much with the community.</p>
 			<p>I also produce music! I mainly listen to rock. I especially love artists like <a href=https://willyrodriguez.bandcamp.com/ style="color: pink;">WillyRodriguezWasTaken</a>.</p>
 	</div>
 </div>
