--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ p {
 
 	<div class="content">
 			<div class="image">
-				<img src="images/terminal_lucidity.jpg"d title="'Terminal Lucidity' album cover." width=100 height=100></a>
+				<img src="images/fennec.png" width=100 height=100></a>
 	        		<div class="text">
 					<h1>Ali</h1>
 					<h4>she/he</h4>
